feat: add certificates section

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <h3>JavaScript</h3>
                     <li>
                         <div class="bar">
-                            <div class="progress" per="60%" style="max-width: 60%;"></div>
+                            <div class="progress" per="70%" style="max-width: 70%;"></div>
                         </div>
-                        <span class="percentage">60%</span>
+                        <span class="percentage">70%</span>
                     </li>
                 </ul>
             </div>
@@ -218,6 +218,53 @@
                         <span class="percentage">95%</span>
                     </li>
                 </ul>
+            </div>
+        </div>
+    </section>
+    <section id="certificates">
+        <h1 class="title">Certificates</h1>
+        <div class="cert-container">
+            <div class="cert-acq">
+                <div class="cert-name">
+                    <div class="icons">
+                        <img src="./public/images/google.png" alt="google logo">
+                    </div>
+                    <h3>Google UX-Design</h3>
+                </div>
+                <div class="cert-content">
+                    <ul class="certs">
+                        <li>Foundations of UX Design</li>
+                        <li>Start the UX Design Process:<br>
+                            Empathize, Define, and Ideate 
+                        </li>
+                        <li>Build Wireframes<br>
+                            and Low-Fidelity Prototypes
+                        </li>
+                        <li>Conduct UX Research<br>
+                            and Test Early Concepts
+                        </li>
+                        <li>Create High-Fidelity Designs<br>
+                            and Prototypes in Figma
+                        </li>
+                        <li>
+                            Build Dynamic<br>
+                            User Interfaces (UI) for Websites
+                        </li>
+                        <li>
+                            Design a User Experience<br>
+                            for Social Good & Prepare for Jobs
+                        </li>
+                    </ul>
+                    <div class="status">
+                        <img id="status" src="./public/images/certificate_line.png" alt="check">
+                        <img id="status" src="./public/images/certificate_line.png" alt="check">
+                        <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
+                        <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
+                        <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
+                        <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
+                        <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
