--- a/index.html
+++ b/index.html
@@ -62,24 +62,93 @@
     <section id="aboutme">
         <p class="section__text__p1">Get to Know More</p>
         <h1 class="title">About Me</h1>
-        <div class="section-container">
-            <div class="about-details-container">
-                <div class="about-containers">
-                    <div class="details-containers">
-                        <img width="50" height="50" 
-                        src="https://img.icons8.com/ios-filled/50/22333B/book-and-pencil.png" 
-                        alt="book-and-pencil"
-                        class="icon"
-                        />
-                        <h3>Education</h3>
-                        <p>Medieninformatik B.Sc.<br />HKA </p>
+        <div class="about-container">
+            <div class="education">
+                <div class="uni-pic">
+                    <img src="./public/images/HKA_Logo_Gesamt-v_RGB.png" alt="hka-logo">
+                </div>
+                <div class="uni-info">
+                    <div class="skills__categories">
+                        Education
+                    </div>
+                    <div class="uni-text">
+                        <h3>B.Sc. Media Computer Science</h3>
+                        <h4>Hochschule Karlsruhe,<br>
+                            University of Applied Sciences
+                        </h4>
+                        
+                    </div>
+                </div> 
+            </div>
+            <div class="interests">
+                <div class="interests-info">
+                    <div class="skills__categories">
+                        My Interests
+                    </div>
+                    <div class="interests-list">
+                        <div class="interest-card">
+                            <div class="interest-card-pic">
+                                <img width="32" height="32" 
+                                    src="https://img.icons8.com/dotty/80/000000/web.png" 
+                                    alt="web"
+                                />
+                            </div>
+                            UX/UI Design
+                        </div>
+                        <div class="interest-card">
+                            <div class="interest-card-pic">
+                                <img width="32" height="32" 
+                                    src="https://img.icons8.com/pastel-glyph/64/augmented-reality-1-1.png" 
+                                    alt="augmented-reality-1-1"
+                                />
+                            </div>
+                            Mixed Reality
+                        </div>
+                        <div class="interest-card">
+                            <div class="interest-card-pic">
+                                <img width="32" height="32" 
+                                    src="https://img.icons8.com/ios/50/000000/controller.png" 
+                                    alt="controller"
+                                />
+                            </div>
+                            Game Design
+                        </div>
+                        <div class="interest-card">
+                            <div class="interest-card-pic">
+                                <img width="32" height="32" 
+                                    src="https://img.icons8.com/ios/50/000000/upload-to-cloud--v1.png" 
+                                    alt="upload-to-cloud--v1"
+                                />
+                            </div>
+                            Cloud Computing
+                        </div>
+                        <div class="interest-card">
+                            <div class="interest-card-pic">
+                                <img width="32" height="32" 
+                                    src="https://img.icons8.com/ios/50/000000/artificial-intelligence.png" 
+                                    alt="artificial-intelligence"
+                                />
+                            </div>
+                            AI
+                        </div>
+                        <div class="interest-card">
+                            <div class="interest-card-pic">
+                                <img width="32" height="32" 
+                                    src="https://img.icons8.com/material-outlined/48/000000/scatter-plot--v1.png" 
+                                    alt="scatter-plot--v1"
+                                />
+                            </div>
+                            Data Science & Visualization
+                        </div>
                     </div>
                 </div>
-                <div class="text-container">
-                    <p>
-                        I'm a media computer science student who is passionate about ux/ui design. My journey as a UX/UI designer as well as a Frontend developer has just begun, yet I'm eager and ambitious to learn new skills that will help me become a UX designer who designs the best solutions for users.
-                    </p>
-                </div>
+            </div>
+        </div>
+        <div class="text-container">
+            <div class="text">
+                I'm a media computer science student who is passionate about ux/ui design.<br>
+                My journey as a UX/UI designer as well as a Frontend developer has just begun, yet I'm eager and ambitious to learn new skills<br>
+                that will help me become a UX designer who designs the best solutions for users.
             </div>
         </div>
     </section>
