feat: add future goals section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
     <!--=============== REMIXICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
 
+    <!--=============== DEVICON ===============-->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/>
+
+    <!--=============== FONTAWESOME ===============-->
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/fontawesome.css"/>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/solid.css"/>
+
+
     <link rel="stylesheet" href="public/stylesheets/style.css"/>
+
+    
+
 </head>
 <body>
     <!-- Navbar -->
@@ -447,6 +458,89 @@
                 <div class="swiper-pagination"></div>
             </div>
         </div> 
+    </section>
+    <section id="goals">
+        <p class="section__text__p1">Near Future</p>
+        <p class="title">Goals</p>
+        <div class="goals-container">
+            <div class="goals-tech">
+                <div class="skills__categories">Technologies</div>
+                <div class="tech-list">
+                    <div class="tech-item">
+                        <i class="devicon-react-original"></i>
+                        <li>React</li>
+                    </div>
+                    <div class="tech-item">
+                        <i class="devicon-nodejs-plain-wordmark"></i>
+                        <li>Node JS</li>
+                    </div>
+                    <div class="tech-item">
+                        <i class="devicon-express-original"></i>
+                    <li>Express</li>
+                    </div>
+                    <div class="tech-item">
+                        <i class="devicon-typescript-plain"></i>
+                        <li>TypeScript</li>
+                    </div>
+                    <div class="tech-item">
+                        <i class="devicon-csharp-plain"></i>
+                        <li>C#</li>
+                    </div>
+                    <div class="tech-item">
+                        <i class="devicon-docker-plain"></i>
+                        <li>Docker</li>
+                    </div>
+                </div>
+            </div>
+            <div class="goals-cert">
+                <div class="skills__categories">Certificates</div>
+                <div class="cert-list">
+                    <li>
+                        Full Stack Software Developer
+                        <ul>
+                            <li>IBM</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Machine Learning
+                        <ul>
+                            <li>
+                                Stanford University, DeepLearning.Ai
+                            </li>
+                        </ul>                        
+                    </li>
+                    <li>
+                        Extended Reality for Everybody
+                        <ul>
+                            <li>
+                                University of Michigan
+                            </li>
+                        </ul> 
+                    </li>
+                </div>
+            </div>
+            <div class="goals-projects">
+                <div class="skills__categories">Projects</div>
+                <div class="proj-list">
+                    <div class="uni-proj">
+                        <div class="uni-icon">
+                            <i class="fa-solid fa-building-columns fa-2x" style="color: #22333B;"></i>
+                            University Projects
+                        </div>
+                        <li>Designing and implementing a game with Unreal Engine</li>
+                        <li>Computer graphics implementation for an asteroid shooting game</li>
+                    </div>
+                    <div class="solo-proj">
+                        <div class="solo-icon">
+                            <i class="fa-solid fa-user fa-2x" style="color: #22333B;"></i>
+                            Projects Outside University
+                        </div>                        
+                        <li>Adaptive UI Design using Machine Learning</li>
+                        <li>UI Design for an XR Application</li>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <nav>
