feat: add animated background using vantajs

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Ishara Musippaththu</title>
 
     <!-- SwiperJS -->
-    <link 
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
     <!--=============== REMIXICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
@@ -57,9 +54,6 @@
             <h1 class="title">Ishara Musippaththu</h1>
             <p class="section__text__p2">and I'm an aspiring UX/UI Designer and Frontend Developer</p>
             <div class="action-btns">
-                <!--<div class="button-container">
-                    <button class="btn btn-v1" onclick="location.href='./#contact'">Contact Info</button> 
-                </div> -->
                 <div id="socials-container">
                     <img src="./public/images/github-mark.png"
                         alt="My Github profile"
@@ -68,7 +62,8 @@
                     />
                 </div>
             </div>
-        </div>    
+        </div>
+        <div id="bg-canvas"></div>
     </section>
     <section id="aboutme">
         <p class="section__text__p1">Get to Know More</p>
@@ -556,6 +551,8 @@
         <p>Copyright &#169; 2024 Ishara Musippaththu. All Rights Reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.fog.min.js"></script>
     <script src="public/javascripts/app.js"></script>
 </body>
 </html>
