refactor: update github link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img src="./public/images/github-mark.png"
                         alt="My Github profile"
                         class="icon"
-                        onclick="location.href='https://github.com/'"
+                        onclick="location.href='https://github.com/ishrdev'"
                     />
                 </div>
             </div>
