update: rename project 1 page to right name

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                             </div>    
                             <h2 class="skills__category project-title">Smart-Blinds App</h2>
                             <div class="button-container">
-                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-v1 project-btn" onclick="location.href='/project-blck.html'">
                                 Open Project
                                 </button>
                             </div>
