feat: add empathy & defining section, add mockup gif, etc.

--- a/project-blck.html
+++ b/project-blck.html
@@ -39,9 +39,14 @@
                     Smart-Blinds App
                 </div>
                 <div class="project-descr">
-                    A university project in which my group and I had to design a GUI for the given
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores libero provident delectus eaque. Ut ducimus dignissimos similique sed ipsam vero, doloribus esse voluptatibus explicabo voluptatem. Laborum mollitia dicta natus commodi?
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, quae amet natus soluta illum culpa, alias saepe at, voluptatibus cumque eius illo laborum minima praesentium sequi dicta modi mollitia fuga.
+                    In the realm of modern technology, our group undertook a 
+                    captivating project to design a Graphical User Interface for
+                     a smart blinds application. Assigned as a university 
+                     assignment, we went through a thorough process involving 
+                     case studies, intensive research, and a UX 
+                     interview to create an intuitive and user-friendly 
+                     interface that would revolutionize user interaction with 
+                     smart blinds.
                 </div>
             </div>
             <div class="project-stat">
@@ -60,60 +65,85 @@
             </div>
         </div>
     </section>
+    <section id="emp-def">
+        <h3>Empathizing & Defining</h3>
+        <div class="emp-container">
+            <div class="emp-text">
+                Empathy is pivotal in UX design, fostering a deep understanding 
+                of users' needs, emotions, and behaviors. By empathizing, 
+                we gain insights vital for crafting meaningful 
+                experiences. It allows stepping into users' shoes, 
+                identifying pain points, and designing solutions that resonate.
+                For this phase of the "Design-Thinking-Process" we created Personas
+                that would represent our target group.  
+            </div>
+            <img src="public/images/Emma_Persona.jpg" alt="Persona: Emma Müller">
+            <img src="public/images/Max_Persona.jpg" alt="Persona: Max Schmidt">   
+        </div>
+        <div class="def-container">
+            <div class="def-text">
+                In the defining process, we envisioned scenarios where users encounter challenges 
+                and how they discover our product. Employing UX Maps and Customer Journey Maps, 
+                we meticulously charted user experiences to grasp the problem comprehensively. 
+                These visual aids provided invaluable insights into user interactions and highlighted opportunities for
+                improvement. By understanding user journeys, we honed our understanding of user needs and devised 
+                strategies to enhance their experience with our product.  
+            </div>
+            <img src="public/images/CustomerJourney_Emma.jpg" alt="Customer Journey Map Emma Müller">
+            <img src="public/images/CustomerJourney_Max.jpg" alt="Customer Journey Map Max Schmidt">   
+        </div>
+    </section>
     <section id="ideas">
-        <h3>Ideation Process</h3>
+        <h3>Ideation</h3>
         <div class="ideas-container">
-            <div class="ideas-proc">
-                <img src="public/images/mmk_ideas.jpg" alt="ideas">
-                <div class="ideas-proc-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo pariatur maiores nihil veniam! Aliquam
-                     dolor veritatis excepturi dicta voluptate earum error soluta quasi voluptas, sequi est enim temporibus!
-                      Atque, inventore? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe voluptatibus, 
-                      pariatur, harum delectus eveniet et libero vitae sed deserunt, similique fuga optio nulla. Tenetur 
-                      officiis facere numquam, ex facilis sed.
+            <div class="ideas-text-img">
+                <div class="ideas-text">
+                    During our ideation process, we gathered to brainstorm app 
+                    functionalities collectively. Following that, we individually sketched several screens, subsequently
+                    sharing and presenting our designs to one another. This intensive session allowed us to generate a plethora of ideas. Subsequently, 
+                    we meticulously assessed and narrowed down our options, ensuring that only the most viable and 
+                    innovative concepts proceeded to the next phase of development.
                 </div>
+                <img src="public/images/ideas.jpg" alt="ideas for app">
             </div>
-            <div class="ideas-wframes">
-                <div class="ideas-wframes-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe hic facilis voluptate eum quas enim? 
-                Sunt, veniam officiis facilis, tempore qui nam a rem optio quisquam iure ullam accusantium esse?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam beatae cum eaque praesentium corporis 
-                voluptatem fugiat eos optio sit alias iusto assumenda culpa eius perferendis, doloremque libero 
-                reprehenderit ducimus quam!
+            <div class="images-container">
+                <img src="public/images/UX Mapping(3).jpg" alt="wireframes">
+                <div class="img2-cont">
+                    <img src="public/images/UX Mapping(1).jpg" alt="wireframes">
+                    <img src="public/images/UX Mapping(2).jpg" alt="wireframes">
                 </div>
-                <img src="public/images/mmk_wireframes.jpg" alt="wireframes">
-            </div>
+                <div class="img2-cont">
+                    <img src="public/images/wireframe_idea1.png" alt="wireframes">
+                    <img src="public/images/wireframe_idea1_2.png" alt="wireframes">
+                </div>
+            </div>  
         </div>  
     </section>
     <section id="solution">
         <h3>Our Solution</h3>
         <div class="sol-container">
-            <div class="sol-wframes">
-                <div class="mockup-container">
-                    <img src="public/images/mmk_wireframes.jpg" alt="wireframes">
-                </div>
-                <div class="sol-wframes-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui officiis ratione praesentium excepturi 
-                    doloribus accusamus, odio consequuntur molestiae? Natus earum quasi libero, sed vel repellat ipsam 
-                    voluptatibus. Fugiat, eum quod!
-                </div>
+            <div class="sol-wframes-text">
+            After carefully considering the needs of our users and our conceptual ideas, we crafted a lo-fi 
+            prototype by consolidating and enhancing the ideas we had developed thus far. This iterative process 
+            allowed us to refine our ideas and incorporate user feedback efficiently. By creating a low-fidelity
+            prototype, we could swiftly iterate and test various design elements, ensuring that our final product 
+            would align closely with user expectations and preferences.
             </div>
-            <div class="mockup-banners">
-                <div class="mockup-container">
-                    <img src="public/images/mmk_mockup_s.png" alt="final version app">
+            <img src="public/images/wieframes_final.png" alt="wireframes final">
+            <div class="mockup-screens">
+                <div class="mockup-gif">
+                    <img src="public/images/blck_mockup_demo.gif" alt="mockup-gif">
                 </div>
-                <div class="mockup-container">
-                    <img src="public/images/mmk_mockup_s.png" alt="final version app">
-                </div>
+                <img src="public/images/mockup_screens.png" alt="mockup">
             </div>
         </div>
     </section>
     <section id="link_proj">
         <h2>See Other Projects</h2>
         <div class="link-proj-container">
-            <li>Project 2</li>
-            <li>Project 3</li>
-            <li>Project 4</li>
+            <li onclick="location.href='project2.html'">Project 2</li>
+            <li onclick="location.href='project3.html'">Project 3</li>
+            <li onclick="location.href='project4.html'">Project 4</li>
         </div>
     </section>
 </body>
