fix: change reference to projects

--- a/project-blck.html
+++ b/project-blck.html
@@ -23,7 +23,7 @@
         </div>
         <div class="dropdown-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#link_proj">Projects</a></li>
         </div>
     </header>
     <div id="mockup">
@@ -146,5 +146,6 @@
             <li onclick="location.href='project4.html'">Project 4</li>
         </div>
     </section>
+    <script type="module" src="public/javascripts/projects.js"></script>
 </body>
 </html>
