feat: add passport page

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                             <div class="article-container">
                                 <img
                                 src="./public/images/mmk_shot.png"
-                                alt="Project 1"
+                                alt="Project smart blinds app"
                                 class="project-img"
                                 />
                             </div>    
@@ -369,13 +369,13 @@
                             <div class="article-container">
                                 <img
                                 src="./public/images/webseite1.png"
-                                alt="Project 2"
+                                alt="Project 3d zoetrope"
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="skills__category project-title">Project Two</h2>
+                            <h2 class="skills__category project-title">3D Zoetrope</h2>
                             <div class="button-container">
-                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-v1 project-btn" onclick="location.href='project-zoetrope.html'">
                                 Open Project
                                 </button>
                             </div>
@@ -390,7 +390,7 @@
                             </div>
                             <h2 class="skills__category project-title">Hotel Website</h2>
                             <div class="button-container">
-                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-v1 project-btn" onclick="location.href='project-onirique.html'">
                                 Open Project
                                 </button>
                             </div>
@@ -418,9 +418,9 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="skills__category project-title">Project Five</h2>
+                            <h2 class="skills__category project-title">Fictive Passport</h2>
                             <div class="button-container">
-                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-v1 project-btn" onclick="location.href='project-passport.html'">
                                 Open Project
                                 </button>
                             </div>
