refactor: make adjustments

--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="skills__category project-title">Project Four</h2>
+                            <h2 class="skills__category project-title">Browsergame MDGA</h2>
                             <div class="button-container">
-                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-v1 project-btn" onclick="location.href='project-mdga.html'">
                                 Open Project
                                 </button>
                             </div>
