--- a/project-blck.html
+++ b/project-blck.html
@@ -141,9 +141,10 @@
     <section id="link_proj">
         <h2>See Other Projects</h2>
         <div class="link-proj-container">
-            <li onclick="location.href='project2.html'">Project 2</li>
-            <li onclick="location.href='project3.html'">Project 3</li>
-            <li onclick="location.href='project4.html'">Project 4</li>
+            <li onclick="location.href='project-zoetrope.html'">3D Zoetrope</li>
+            <li onclick="location.href='project-onirique.html'">Hotel Website</li>
+            <li onclick="location.href='project-passport.html'">Fictive Passport</li>
+            <li onclick="location.href='project-mdga.html'">Browsergame MDGA</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
