--- a/project-onirique.html
+++ b/project-onirique.html
@@ -39,24 +39,21 @@
                     Hotel Website
                 </div>
                 <div class="project-descr">
-                    In the realm of modern technology, our group undertook a 
-                    captivating project to design a Graphical User Interface for
-                     a smart blinds application. Assigned as a university 
-                     assignment, we went through a thorough process involving 
-                     case studies, intensive research, and a UX 
-                     interview to create an intuitive and user-friendly 
-                     interface that would revolutionize user interaction with 
-                     smart blinds.
+                    In a university project centered on an imaginary underwater world, for which I conceptualized a business idea 
+                    tailored to this unique setting. Designing a website for my luxury hotel brand, Onirique, meaning 
+                    "dreamy" in French, I aimed to evoke familiarity amidst opulence. Crafting an experience that 
+                    harmonized with the fantastical underwater landscape, I envisioned a haven where guests could 
+                    indulge in luxury while feeling right at home.
                 </div>
             </div>
             <div class="project-stat">
                 <div class="stat-category">
                     SETTING
-                    <li>Teams of 3</li>
+                    <li>Individual Task</li>
                 </div>
                 <div class="stat-category">
                     TIMELINE
-                    <li>12 Weeks</li>
+                    <li>7 Weeks</li>
                 </div>
                 <div class="stat-category">
                     STATUS
@@ -65,76 +62,38 @@
             </div>
         </div>
     </section>
-    <section id="emp-def">
-        <h3>Empathizing & Defining</h3>
-        <div class="emp-container">
-            <div class="emp-text">
-                Empathy is pivotal in UX design, fostering a deep understanding 
-                of users' needs, emotions, and behaviors. By empathizing, 
-                we gain insights vital for crafting meaningful 
-                experiences. It allows stepping into users' shoes, 
-                identifying pain points, and designing solutions that resonate.
-                For this phase of the "Design-Thinking-Process" we created Personas
-                that would represent our target group.  
-            </div>
-            <img src="public/images/Emma_Persona.jpg" alt="Persona: Emma Müller">
-            <img src="public/images/Max_Persona.jpg" alt="Persona: Max Schmidt">   
-        </div>
-        <div class="def-container">
-            <div class="def-text">
-                In the defining process, we envisioned scenarios where users encounter challenges 
-                and how they discover our product. Employing UX Maps and Customer Journey Maps, 
-                we meticulously charted user experiences to grasp the problem comprehensively. 
-                These visual aids provided invaluable insights into user interactions and highlighted opportunities for
-                improvement. By understanding user journeys, we honed our understanding of user needs and devised 
-                strategies to enhance their experience with our product.  
-            </div>
-            <img src="public/images/CustomerJourney_Emma.jpg" alt="Customer Journey Map Emma Müller">
-            <img src="public/images/CustomerJourney_Max.jpg" alt="Customer Journey Map Max Schmidt">   
-        </div>
-    </section>
     <section id="ideas">
         <h3>Ideation</h3>
         <div class="ideas-container">
             <div class="ideas-text-img">
                 <div class="ideas-text">
-                    During our ideation process, we gathered to brainstorm app 
-                    functionalities collectively. Following that, we individually sketched several screens, subsequently
-                    sharing and presenting our designs to one another. This intensive session allowed us to generate a plethora of ideas. Subsequently, 
-                    we meticulously assessed and narrowed down our options, ensuring that only the most viable and 
-                    innovative concepts proceeded to the next phase of development.
+                    Prior to website development, I focused on crafting a logo that resonated with the hotel brand. 
+                    Exploring multiple concepts, I selected one that harmonized seamlessly with the hotel's name. 
+                    Subsequently, I outlined wireframes for key website pages, ensuring a cohesive and user-friendly layout.
                 </div>
-                <img src="public/images/ideas.jpg" alt="ideas for app">
+                <img src="public/images/Logo-Ideas.jpg" alt="ideas for logos">
+                
             </div>
-            <div class="images-container">
-                <img src="public/images/UX Mapping(3).jpg" alt="wireframes">
-                <div class="img2-cont">
-                    <img src="public/images/UX Mapping(1).jpg" alt="wireframes">
-                    <img src="public/images/UX Mapping(2).jpg" alt="wireframes">
-                </div>
-                <div class="img2-cont">
-                    <img src="public/images/wireframe_idea1.png" alt="wireframes">
-                    <img src="public/images/wireframe_idea1_2.png" alt="wireframes">
-                </div>
+            <div class="img-ideas">
+                <img src="public/images/Main-idea.jpg" alt="main page idea">
+                <img src="public/images/Rooms-idea.jpg" alt="rooms page idea">
+                <img src="public/images/Booking-idea.jpg" alt="booking page idea"> 
             </div>  
         </div>  
     </section>
     <section id="solution">
-        <h3>Our Solution</h3>
+        <h3>Design</h3>
         <div class="sol-container">
             <div class="sol-wframes-text">
-            After carefully considering the needs of our users and our conceptual ideas, we crafted a lo-fi 
-            prototype by consolidating and enhancing the ideas we had developed thus far. This iterative process 
-            allowed us to refine our ideas and incorporate user feedback efficiently. By creating a low-fidelity
-            prototype, we could swiftly iterate and test various design elements, ensuring that our final product 
-            would align closely with user expectations and preferences.
+                For the design phase, I curated a color palette evoking luxury and cleanliness. I aimed for a cohesive visual identity, which I achieved
+                through selecting fonts that embodied these qualities. Additionally, I utilized interior 
+                design software to personally craft each room, leveraging existing knowledge.
             </div>
-            <img src="public/images/wieframes_final.png" alt="wireframes final">
-            <div class="mockup-screens">
+            <div class="website-screens">
+                <img src="public/images/style_guide.png" alt="style_guide" id="style_guide">
                 <div class="mockup-gif">
-                    <img src="public/images/blck_mockup_demo.gif" alt="mockup-gif">
+                    <img src="public/images/onirique-gif.gif" alt="website gif">
                 </div>
-                <img src="public/images/mockup_screens.png" alt="mockup">
             </div>
         </div>
     </section>
@@ -142,8 +101,9 @@
         <h2>See Other Projects</h2>
         <div class="link-proj-container">
             <li onclick="location.href='project-zoetrope.html'">3D Zoetrope</li>
-            <li onclick="location.href='project3.html'">Project 3</li>
-            <li onclick="location.href='project4.html'">Project 4</li>
+            <li onclick="location.href='project-blck.html'">Smart Blinds App</li>
+            <li onclick="location.href='project-mdga.html'">Browsergame MDGA</li>
+            <li onclick="location.href='project-passport.html'">Fictive Passport</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
