feat: add mdga images

--- a/project-mdga.html
+++ b/project-mdga.html
@@ -82,6 +82,7 @@
             <li onclick="location.href='project-onirique.html'">Hotel Website</li>
             <li onclick="location.href='project-blck'">Smart Blinds App</li>
             <li onclick="location.href='project-passport.html'">Fictive Passport</li>
+            <li onclick="location.href='project-zoetrope.html'">3D Zoetrope</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
