feat: add repo link

--- a/project-blck.html
+++ b/project-blck.html
@@ -145,6 +145,7 @@
             <li onclick="location.href='project-onirique.html'">Hotel Website</li>
             <li onclick="location.href='project-passport.html'">Fictive Passport</li>
             <li onclick="location.href='project-mdga.html'">Browsergame MDGA</li>
+            <li onclick="location.href='https://github.com/ishrdev/portfolio'">My Portfolio Repository</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
