--- a/project-mdga.html
+++ b/project-mdga.html
@@ -83,6 +83,7 @@
             <li onclick="location.href='project-blck'">Smart Blinds App</li>
             <li onclick="location.href='project-passport.html'">Fictive Passport</li>
             <li onclick="location.href='project-zoetrope.html'">3D Zoetrope</li>
+            <li onclick="location.href='https://github.com/ishrdev/portfolio'">My Portfolio Repository</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
