--- a/project-onirique.html
+++ b/project-onirique.html
@@ -104,6 +104,7 @@
             <li onclick="location.href='project-blck.html'">Smart Blinds App</li>
             <li onclick="location.href='project-mdga.html'">Browsergame MDGA</li>
             <li onclick="location.href='project-passport.html'">Fictive Passport</li>
+            <li onclick="location.href='https://github.com/ishrdev/portfolio'">My Portfolio Repository</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
