--- a/project-passport.html
+++ b/project-passport.html
@@ -81,6 +81,7 @@
             <li onclick="location.href='project-blck.html'">Smart Blinds App</li>
             <li onclick="location.href='project-mdga.html'">Browsergame MDGA</li>
             <li onclick="location.href='project-zoetrope.html'">3D Zoetrope</li>
+            <li onclick="location.href='https://github.com/ishrdev/portfolio'">My Portfolio Repository</li>
         </div>
     </section>
     <script type="module" src="public/javascripts/projects.js"></script>
