refactor: update project slide images

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         <div class="project-card swiper-slide">
                             <div class="article-container">
                                 <img
-                                src="./public/images/webseite1.png"
+                                src="./public/images/zoetrope-shot.png"
                                 alt="Project 3d zoetrope"
                                 class="project-img"
                                 />
@@ -383,7 +383,7 @@
                         <div class="project-card swiper-slide">
                             <div class="article-container">
                                 <img
-                                src="./public/images/webseite1.png"
+                                src="./public/images/onirique-proj-shot.png"
                                 alt="Project 3"
                                 class="project-img"
                                 />
@@ -398,7 +398,7 @@
                         <div class="project-card swiper-slide">
                             <div class="article-container">
                                 <img
-                                src="./public/images/github-mark.png"
+                                src="./public/images/mdga-shot.png"
                                 alt="Project 2"
                                 class="project-img"
                                 />
@@ -413,7 +413,7 @@
                         <div class="project-card swiper-slide">
                             <div class="article-container">
                                 <img
-                                src="./public/images/github-mark.png"
+                                src="./public/images/passport-shot.png"
                                 alt="Project 2"
                                 class="project-img"
                                 />
@@ -433,9 +433,9 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="skills__category project-title">Project Six</h2>
+                            <h2 class="skills__category project-title">Portfolio Repository</h2>
                             <div class="button-container">
-                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/'">
+                                <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/ishrdev/portfolio'">
                                 Open Project
                                 </button>
                             </div>
