feat: add portfolio page image and fix width of canva

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutme">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="burger-menu">
                 <div class="bar1"></div>
@@ -45,7 +44,6 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#aboutme">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
         </div>
     </header>
     <section id="home">
@@ -152,9 +150,10 @@
         </div>
         <div class="text-container">
             <div class="text">
-                I'm a media computer science student who is passionate about ux/ui design.<br>
-                My journey as a UX/UI designer as well as a Frontend developer has just begun, yet I'm eager and ambitious to learn new skills<br>
-                that will help me become a UX designer who designs the best solutions for users.
+                As a media computer science student, I'm enthusiastic about delving into UI/UX Design. 
+                Although my journey is in its early stages, I'm driven to expand my knowledge and skills. My ambition is
+                to evolve into a UI/UX Designer and Frontend Developer, crafting optimal solutions that prioritize user needs 
+                and experiences.
             </div>
         </div>
     </section>
@@ -403,7 +402,7 @@
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="skills__category project-title">Browsergame MDGA</h2>
+                            <h2 class="skills__category project-title">Browsergame</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='project-mdga.html'">
                                 Open Project
@@ -428,12 +427,12 @@
                         <div class="project-card swiper-slide">
                             <div class="article-container">
                                 <img
-                                src="./public/images/github-mark.png"
+                                src="./public/images/portfolio-shot.png"
                                 alt="Project 2"
                                 class="project-img"
                                 />
                             </div>
-                            <h2 class="skills__category project-title">Portfolio Repository</h2>
+                            <h2 class="skills__category project-title">Portfolio Repo</h2>
                             <div class="button-container">
                                 <button class="btn btn-v1 project-btn" onclick="location.href='https://github.com/ishrdev/portfolio'">
                                 Open Project
@@ -544,7 +543,6 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutme">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
