feat: Edit texts

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         </div>
         <div class="text-container">
             <div class="text">
-                As a media computer science student, I'm enthusiastic about delving into UI/UX Design. 
-                Although my journey is in its early stages, I'm driven to expand my knowledge and skills. My ambition is
+                As a media computer science student, I'm enthusiastic about delving into UI/UX Design.<br> 
+                Although my journey is in its early stages, I'm driven to expand my knowledge and skills.<br> My ambition is
                 to evolve into a UI/UX Designer and Frontend Developer, crafting optimal solutions that prioritize user needs 
                 and experiences.
             </div>
