--- a/project-onirique.html
+++ b/project-onirique.html
@@ -39,11 +39,10 @@
                     Hotel Website
                 </div>
                 <div class="project-descr">
-                    In a university project centered on an imaginary underwater world, for which I conceptualized a business idea 
-                    tailored to this unique setting. Designing a website for my luxury hotel brand, Onirique, meaning 
-                    "dreamy" in French, I aimed to evoke familiarity amidst opulence. Crafting an experience that 
-                    harmonized with the fantastical underwater landscape, I envisioned a haven where guests could 
-                    indulge in luxury while feeling right at home.
+                    I conceptualized a business idea for a university project centered on an imaginary underwater world.
+                    Designing a website for my luxury hotel brand, Onirique (meaning "dreamy" in French), I aimed to evoke 
+                    familiarity amidst opulence. Crafting an experience that harmonized with the fantastical underwater landscape, 
+                    I envisioned a haven where guests could indulge in luxury while feeling right at home.
                 </div>
             </div>
             <div class="project-stat">
