feat: change certificate status to acquired

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <div class="status">
                         <img id="status" src="./public/images/certificate_line.png" alt="check">
                         <img id="status" src="./public/images/certificate_line.png" alt="check">
-                        <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
+                        <img id="status" src="./public/images/certificate_line.png" alt="check">
                         <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
                         <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
                         <img id="status" src="./public/images/loading_2_fill.png" alt="loading">
